# project_management_crud_example

./: .coveragerc  .gitignore  CLAUDE.md  DEMO_SETUP.md  README.md  STUB_TEMPLATE_USAGE.md  pyproject.toml  pytest.ini
.claude/: settings.local.json
devtools/: __init__.py  run_all_agent_validations.sh  run_all_validations.sh  run_lint_format_auto_fix.sh  run_lint_format_check.sh  run_tests.sh  run_tests_watch.sh  run_type_check.sh
docs/: how_to_implement_tasks.md
docs/diagrams/: architecture.excalidraw  architecture.html  architecture.html.backup  architecture_ascii.txt
docs/spec/: how_to_write_specs.md  main_spec.md
docs/tasks/: current_task_list.md  current_task_list.md.EXAMPLE  task_2_implementation_plan.md  task_3_implementation_plan.md  task_4_implementation_plan.md  task_implementation_plan.md
docs/tech_spec/: high_level_architecture.md
docs/testing/: coverage_guide.md
frontend/: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.tsbuildinfo  vite.config.e2e.ts
frontend/e2e/: create-project.spec.ts  create-user.spec.ts  epic-details.spec.ts  epic-management.spec.ts  epic-progress-tracking.spec.ts  epic-ticket-relationship.spec.ts  global-setup.ts  global-teardown.ts  health-check.spec.ts  login-flow.spec.ts  navigation.spec.ts  organizations.spec.ts  project-details.spec.ts  ticket-advanced.spec.ts  ticket-details.spec.ts  ticket-filtering-sorting.spec.ts  ticket-management.spec.ts
frontend/src/: App.tsx  index.css
project_management_crud_example/: app.py  bootstrap.py  bootstrap_data.py  bootstrap_rich_data.py  code_stub.py  config.py  dependencies.py  domain_models.py  exceptions.py
project_management_crud_example/dal/: __init__.py
project_management_crud_example/routers/: __init__.py  activity_log_api.py  api.py  auth_api.py  comment_api.py  e2e_api.py  epic_api.py  health.py  organization_api.py  project_api.py  stub_entity_api.py  ticket_api.py  user_api.py  workflow_api.py
project_management_crud_example/utils/: __init__.py  activity_log_helpers.py  debug_diff_helpers.py  debug_helpers.py  jwt.py  password.py
tests/: CLAUDE.md  conftest.py  helpers.py  test_bootstrap.py  test_stub.py
tests/api/: test_activity_log_api.py  test_auth_api.py  test_comment_api.py  test_custom_workflow_validation.py  test_epic_api.py  (+8 more)
(+60 files in other folders)
