[project]
name = "project-management-crud-example"
version = "0.1.0"
description = "project management crud example"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt>=5.0.0",
    "deepdiff>=8.6.1",
    "email-validator>=2.3.0",
    "fastapi>=0.119.1",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.11.0",
    "pyjwt>=2.10.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "pytest-cov>=7.0.0",
    "pytest-testmon>=2.1.3",
    "pytest-watch>=4.2.0",
    "ruff>=0.11.12",
    "ty>=0.0.1a21",
]

[tool.ruff]
target-version = "py314"
line-length = 120

exclude = [
  ".eggs",
  ".git",
  ".git-rewrite",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".venv",
  "venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "build",
  "dist",
  "node_modules",
  "site-packages",
]

[tool.ruff.lint]
select = [
  "E4",
  "E7",
  "E9",
  "F",
  "ANN",  # flake8-annotations - type annotation rules.
  "B",  # flake8-bugbear
  "I",  # ~isort
  ]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F811"]  # Ignore redefinition warnings in test files (pytest fixtures)
